# anime_list

./: .gitignore  README.md  pyproject.toml
release/android/: app-release.apk.sha1
release/linux/: animelist
release/linux/data/flutter_assets/: NOTICES.Z  version.json
release/linux/data/flutter_assets/app/: app.zip.hash
src/: main.py
